[workspace]
members = [
  # COMMON
  "common",
  # SESSION CODE
  "session-code",
  # SESSION CODE
  # MINTER
  "minter/minter",
  "minter/minter-crate",
  "minter/minter-proxy",
  "minter/minter-tests",
  # GAUGE CONTROLLER
  "gauge-controller/gauge-controller",
  "gauge-controller/gauge-controller-crate",
  "gauge-controller/gauge-controller-proxy",
  "gauge-controller/gauge-controller-tests",
  # GAUGE PROXY
  "gauge-proxy/gauge-proxy",
  "gauge-proxy/gauge-proxy-crate",
  "gauge-proxy/gauge-proxy-tests",
  # REWARD ONLY GAUGE
  "reward-only-gauge/reward-only-gauge",
  "reward-only-gauge/reward-only-gauge-crate",
  "reward-only-gauge/reward-only-gauge-proxy",
  "reward-only-gauge/reward-only-gauge-tests",
  # VESTING ESCROW
  "vesting-escrow/vesting-escrow",
  "vesting-escrow/vesting-escrow-crate",
  "vesting-escrow/vesting-escrow-proxy",
  "vesting-escrow/vesting-escrow-tests",
  # VESTING ESCROW FACTORY
  "vesting-escrow-factory/vesting-escrow-factory",
  "vesting-escrow-factory/vesting-escrow-factory-crate",
  "vesting-escrow-factory/vesting-escrow-factory-proxy",
  "vesting-escrow-factory/vesting-escrow-factory-tests",
  # VotingEscrow
  "voting-escrow/voting-escrow",
  "voting-escrow/voting-escrow-crate",
  "voting-escrow/voting-escrow-tests",
  # Fee Distributor 
  "fee-distributor/fee-distributor",
  "fee-distributor/fee-distributor-crate",
  "fee-distributor/fee-distributor-tests",
  # Liquidity Gauge Reward
  "liquidity-gauge-reward/liquidity-gauge-reward",
  "liquidity-gauge-reward/liquidity-gauge-reward-crate",
  "liquidity-gauge-reward/liquidity-gauge-reward-tests",
  # ERC-20 CRV
  "erc20-crv/erc20_crv",
  "erc20-crv/erc20_crv_tests",
  "erc20-crv/session_code",
  # VESTING ESCROW SIMPLE
  "vesting-escrow-simple/vesting-escrow-simple-crate",
  "vesting-escrow-simple/vesting-escrow-simple",
  "vesting-escrow-simple/vesting-escrow-simple-tests",
  "vesting-escrow-simple/vesting-escrow-simple-proxy",
  # ERC20
  "erc20/erc20",
  "erc20/erc20-crate",
  "erc20/erc20-proxy",
  "erc20/erc20-tests",
  # LIQUIDITY GAUGE REWARD WRAPPER
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-crate",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-tests",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-session-code",
  # CURVE TOKEN V3
  "curve-token-v3/curve-token-v3",
  "curve-token-v3/curve-token-v3-crate",
  "curve-token-v3/curve-token-v3-proxy",
  "curve-token-v3/curve-token-v3-tests",
  # LIQUIDITY GAUGE WRAPPER
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-crate",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-tests",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-session-code",
  #LIQUIDITY GAUGE V3
  "liquidity-gauge-v3/liquidity-gauge-v3",
  "liquidity-gauge-v3/liquidity-gauge-v3-crate",

]

[profile.release]
codegen-units = 1
lto = true
