[workspace]
members = [
  # COMMON
  "common",
  # SESSION CODE
  "session-code",
  # CURVE TOKEN V3
  "curve-token-v3/curve-token-v3",
  "curve-token-v3/curve-token-v3-tests",
  # ERC20
  "erc20/erc20",
  "erc20/erc20-crate",
  "erc20/erc20-proxy",
  "erc20/erc20-tests",
  # ERC-20 CRV
  "erc20-crv/erc20_crv",
  "erc20-crv/erc20_crv_tests",
  "erc20-crv/session_code",
  # FEE DISTRIVUTOR
  "fee-distributor/fee-distributor",
  "fee-distributor/fee-distributor-crate",
  "fee-distributor/fee-distributor-tests",
  # GAUGE CONTROLLER
  "gauge-controller/gauge-controller",
  "gauge-controller/gauge-controller-crate",
  "gauge-controller/gauge-controller-tests",
  "gauge-controller/session-code",
  # GAUGE PROXY
  "gauge-proxy/gauge-proxy",
  "gauge-proxy/gauge-proxy-crate",
  "gauge-proxy/gauge-proxy-tests",
  # LIQUIDITY GAUGE REWARD
  "liquidity-gauge-reward/liquidity-gauge-reward",
  "liquidity-gauge-reward/liquidity-gauge-reward-crate",
  "liquidity-gauge-reward/liquidity-gauge-reward-tests",
  "liquidity-gauge-reward/liquidity-gauge-reward-session-code",
  # LIQUIDITY GAUGE REWARD WRAPPER
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-crate",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-tests",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-session-code",
  # LIQUIDITY GAUGE WRAPPER
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-crate",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-tests",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-session-code",
  # MINTER
  "minter/minter",
  "minter/minter-crate",
  "minter/minter-tests",
  # REWARD ONLY GAUGE
  "reward-only-gauge/reward-only-gauge",
  "reward-only-gauge/reward-only-gauge-crate",
  "reward-only-gauge/reward-only-gauge-tests",
  "reward-only-gauge/session-code",
  # VESTING ESCROW
  "vesting-escrow/vesting-escrow",
  "vesting-escrow/vesting-escrow-crate",
  "vesting-escrow/vesting-escrow-tests",
  "vesting-escrow/session-code",
  # VESTING ESCROW FACTORY
  "vesting-escrow-factory/vesting-escrow-factory",
  "vesting-escrow-factory/vesting-escrow-factory-crate",
  "vesting-escrow-factory/vesting-escrow-factory-tests",
  "vesting-escrow-factory/session-code",
  # VESTING ESCROW SIMPLE
  "vesting-escrow-simple/vesting-escrow-simple-crate",
  "vesting-escrow-simple/vesting-escrow-simple",

  # ERC20
  "erc20/erc20",
  "erc20/erc20-crate",
  "erc20/erc20-proxy",
  "erc20/erc20-tests",
  # LIQUIDITY GAUGE REWARD WRAPPER
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-crate",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-tests",
  "liquidity-gauge-reward-wrapper/liquidity-gauge-reward-wrapper-session-code",
  # CURVE TOKEN V3
  "curve-token-v3/curve-token-v3",
  "curve-token-v3/curve-token-v3-crate",
  "curve-token-v3/curve-token-v3-proxy",
  "curve-token-v3/curve-token-v3-tests",
  # LIQUIDITY GAUGE WRAPPER
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-crate",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-tests",
  "liquidity-gauge-wrapper/liquidity-gauge-wrapper-session-code",
   # VOTING ESCROW
  "voting-escrow/voting-escrow",
  "voting-escrow/voting-escrow-crate",
  "voting-escrow/voting-escrow-tests",
  # Ownable
  "ownable/ownable",
  "ownable/ownable-crate",
  "ownable/ownable-tests",
  "ownable/ownable-session-code",
  # IREWARDDISTRIBUTIONRECIPIENT
  "i-reward-distribution-recipient/i-reward-distribution-recipient",
  "i-reward-distribution-recipient/i-reward-distribution-recipient-crate",
  "i-reward-distribution-recipient/i-reward-distribution-recipient-tests",
  # Lp Token WRAPPER
  "lp-token-wrapper/lp-token-wrapper",
  "lp-token-wrapper/lp-token-wrapper-crate",
  "lp-token-wrapper/lp-token-wrapper-tests",
  "lp-token-wrapper/lp-token-wrapper-session-code",
  # Curve Rewards
  "curve-rewards/curve-rewards",
  "curve-rewards/curve-rewards-crate",
  "curve-rewards/curve-rewards-tests",
  "curve-rewards/curve-rewards-session-code",
  #LIQUIDITY GAUGE V3
  "liquidity-gauge-v3/liquidity-gauge-v3",
  "liquidity-gauge-v3/liquidity-gauge-v3-crate",
  "liquidity-gauge-v3/liquidity-gauge-v3-tests",
  "liquidity-gauge-v3/liquidity-gauge-v3-session-code",

]

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
renvm-sig = { git = 'https://github.com/Scytalelabs-official/CasperLabs-renvm-sig.git', branch = 'main' }