[package]
name = "child-streamer"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
child-streamer-crate = { path = "../child-streamer-crate" }

[[bin]]
name = "child-streamer-token"
path = "bin/child_streamer_token.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]