[package]
name = "curve-erc20-crate"
version = "0.1.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
common = { path = "../../common" }
curve-casper-erc20-crate = { path = "../../curve-casper-erc20-crate" }