[package]
name = "curve-erc20-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
casper-engine-test-support = "2.1.0"
casperlabs-test-env = "0.3.0"
base64 = "0.13.0"
hex = "0.4.3"
blake2 = "0.9.1"
curve-casper-erc20-crate = { path = "../../curve-casper-erc20-crate" }