[package]
name = "curve-rewards-crate"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
common = { path = "../../common"}
i-reward-distribution-recipient-crate = {path = "../../i-reward-distribution-recipient/i-reward-distribution-recipient-crate"}
lp-token-wrapper-crate = {path = "../../lp-token-wrapper/lp-token-wrapper-crate"}
hex = { version = "0.4.3", default-features = false }
cryptoxide = "0.3.3"
