[package]
authors = ["Muhammad Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "curve-rewards"
version = "0.2.0"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
common = {path = "../../common"}
curve-rewards-crate = { path = "../curve-rewards-crate" }

[[bin]]
bench = false
doctest = false
name = "curve-rewards"
path = "bin/curve_rewards.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]