[package]
name = "curve-token-v3-crate"
version = "0.2.0"
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
common = { path = "../../common" }
casperlabs-contract-utils = "0.1.0"
hex = { version = "0.4.3", default-features = false }