[package]
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"
name = "curve-token-v3-tests"
version = "0.1.0"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.1.0", features = ["test-support"] }
casper-execution-engine = "1.5.0"
casper-types = "1.5.0"
casper-hashing = "1.4.3"
casperlabs-test-env = "0.3.0"
base64 = "0.13.0"

curve-erc20-crate = {path="../../curve-erc20/curve-erc20-crate"}
casperlabs-contract-utils = "0.2.1"
common = { path = "../../common" }
hex = "0.4.3"
blake2 = "0.9.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]