[package]
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"
name = "curve_token_v3"
version = "0.1.0"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
hex = {version = "0.4.3", default-features = false}
renvm-sig = "0.1.1"
erc20_crate = { path = "../../erc20_crate" }

[[bin]]
bench = false
doctest = false
name = "curve_token_v3"
path = "bin/curve_token_v3.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
