[package]
name = "curve-token-v3"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
curve-token-v3-crate = { path = "../curve-token-v3-crate" }

[[bin]]
name = "curve-token-v3"
path = "bin/curve_token_v3.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]