[package]
name = "curve-token-v3"
version = "0.2.0"
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
curve-token-v3-crate = { path = "../curve-token-v3-crate" }
crv20 = "0.1.0"


[[bin]]
name = "curve-token-v3"
path = "bin/curve_token_v3.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]