[package]
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"
name = "erc20_crv"
version = "0.1.0"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.4"
contract-utils = { path = "../../utils/contract-utils" }
hex = {version = "0.4.3", default-features = false}
renvm-sig = "0.1.1"
erc20-crate = { path = "../../erc20/erc20-crate" }
common = { path = "../../common" }

[[bin]]
bench = false
doctest = false
name = "erc20_crv"
path = "bin/erc20_crv.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
