[package]
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"
name = "erc20_crv"
version = "0.1.0"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.4"
casperlabs-contract-utils = "0.1.0"
hex = {version = "0.4.3", default-features = false}
renvm-sig = "0.1.1"
casperlabs-erc20 = "0.2.1"
common = { path = "../../common" }

[[bin]]
bench = false
doctest = false
name = "erc20_crv"
path = "bin/erc20_crv.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
