[package]
name = "erc20-crate"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
common = { path = "../../common" }
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
renvm-sig = "0.1.1"
hex = { version = "0.4.3", default-features = false }
cryptoxide = "0.3.3"