[package]
name = "fee-distributor-session-code-js-client"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
common = { path = "../../common" }
voting-escrow-crate = { path = "../../voting-escrow/voting-escrow-crate" }

[[bin]]
name = "fee-distributor-session-code-js-client"
path = "bin/main.rs"
bench = false
doctest = false
test = false
