[package]
name = "gauge-proxy"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
gauge-proxy-crate = { path = "../gauge-proxy-crate" }

[[bin]]
name = "gauge-proxy"
path = "bin/gauge_proxy.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]