[package]
authors = ["Muhammad Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "i-reward-distribution-recipient"
version = "0.2.0"

[dependencies]
casperlabs-i-reward-distribution-recipient = "0.1.0"
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
casperlabs-ownable = "0.1.0"
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1 "

[[bin]]
bench = false
doctest = false
name = "i-reward-distribution-recipient"
path = "bin/i_reward_distribution_recipient.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
