[package]
name = "liquidity-gauge-reward-wrapper-session-code"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
common = {path = "../../common"}

[[bin]]
name = "liquidity-gauge-reward-wrapper-session-code"
path = "bin/main.rs"
bench = false
doctest = false
test = false
