[package]
name = "liquidity-gauge-reward-wrapper-tests"
version = "0.1.0"
authors = ["Muhammad Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-engine-test-support = "2.1.0"
common = { path = "../../common" }
casperlabs-test-env = "0.3.0"
casperlabs-contract-utils = "0.2.1"
crv20 = "0.1.0"
liquidity-gauge-reward-wrapper-crate = { path = "../liquidity-gauge-reward-wrapper-crate" }
hex = "0.4.3"
blake2 = "0.9.1"
base64 = "0.13.0"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]