[package]
name = "liquidity-gauge-reward-wrapper"
version = "0.2.0"
authors = ["Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
liquidity-gauge-reward-wrapper-crate = { path = "../liquidity-gauge-reward-wrapper-crate" }

[[bin]]
name = "liquidity-gauge-reward-wrapper"
path = "bin/liquidity_gauge_reward_wrapper.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]