[package]
name = "liquidity-gauge-reward-tests"
version = "0.1.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-engine-test-support = "2.1.0"
common = { path = "../../common" }
casperlabs-test-env = "0.1.0"
casperlabs-contract-utils = "0.1.0"
liquidity-gauge-reward-crate = { path = "../liquidity-gauge-reward-crate" }
hex = "0.4.3"
blake2 = "0.9.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[lib]
doctest = false