[package]
name = "liquidity-gauge-reward"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
liquidity-gauge-reward-crate = { path = "../liquidity-gauge-reward-crate" }

[[bin]]
name = "liquidity-gauge-reward"
path = "bin/liquidity_gauge_reward.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]